# calcul_idc_dashboard

./: .gitignore  README.md  adresses_egid.db  dashboard_idc.py  idc.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  run_test.yml
.streamlit/: config.toml
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/sections/: TLDR.md  donnees.md  faq.md  onglets.md  surelevations.md
mkdocs/site/: 404.html  index.html  sitemap.xml
mkdocs/site/sections/TLDR/: index.html
mkdocs/site/sections/donnees/: index.html
mkdocs/site/sections/faq/: index.html
mkdocs/site/sections/onglets/: index.html
mkdocs/site/sections/surelevations/: index.html
notebook/: autor.ipynb  idc.ipynb
notebooks/: idc.ipynb  notebook.ipynb
sections/helpers/: affectations_idc_sre.py  affectations_sre.py  agents_energetiques.py  agents_energetiques_idc.py  amoen_historique.py  autor_api.py  avusy.py  calcul_dj.py  dates.py  db.py  graphique_bars_exploitation.py  idc_api.py  idc_charts.py  idc_geo.py  idc_tables.py  note_calcul_idc_main.py  note_calcul_main.py  query_IDC.py  rapport.py  reseau_thermique_api.py  resultats_idc.py  sanitize_mongo.py  save_excel_streamlit.py  sidebar.py  user_data.py  validation_saisie.py
sections/helpers/admin/: admin_chiffre_cle.py  admin_db_mgmt.py
sections/helpers/note_calcul/: calculs.py  calculs_idc.py  constantes.py  create_dataframe_agent_energetique.py  create_dataframe_idc.py  create_dataframe_list.py  create_dataframe_meteo.py  create_dataframe_periode_list.py  create_dataframe_results.py  latex.py  remarques_idc.py
tests/: test_batiments_db.py  test_db_startup_refresh.py  test_fetch_idc_data.py  test_idc_api_integration.py  test_idc_db.py  test_idc_geo.py  test_note_calcul.py  test_note_calcul_idc.py  test_save_excel.py  test_validate_schema.py
